--- a/TMP_oop.vcxproj.filters
+++ b/TMP_oop.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Fiction.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Documentary.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Container.h">
@@ -42,6 +45,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Fiction.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Documentary.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
