--- a/TMP_oop.vcxproj
+++ b/TMP_oop.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="Cartoon.cpp" />
     <ClCompile Include="Container.cpp" />
+    <ClCompile Include="Container_MultiMethod.cpp" />
     <ClCompile Include="Fiction.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Movie.cpp" />
