--- a/TMP_oop.vcxproj.filters
+++ b/TMP_oop.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Fiction.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Container_MultiMethod.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Container.h">
